# ChessGame

./: CMakeLists.txt  LICENSE  README.md
core/: board.cpp  board.h  position.cpp  position.h  utils.h
core/pieces/: piece.cpp  piece.h  rook.cpp  rook.h
terminal/: main.cpp  terminal_utils.cpp  terminal_utils.h
